syntax = "proto3";

package user_rpc;

option go_package = "internal/user/domain/user_rpc";

service UserRPC {
  rpc Get(GetRequest) returns(GetResponse) {}
}

message User {
  string Id = 5;
  string Login = 1;
  string Password = 2;
  string Email = 3;
  bool   IsActive = 4;
}

// GET
message GetRequest {
  string Id = 1;
}

message GetResponse {
  User User = 1;
}
